# rokey_project_

./: .gitignore
..bfg-report/2025-10-06/00-29-08/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
Non_project/collaboration1/: 0602_lego1.py  last_block_code_ros_moving.py  last_code_ros_gear_move.py  last_code_ros_gear_move_auto.py  pos.py
Non_project/collaboration3/turtlebot3_ws/: control_intersection_sign.py  control_lane_재권주차추가.py  control_traffic copy.py  control_traffic.launch.py
Non_project/intelligence1/: cctv_yolo.py
Non_project/intelligence1/fire_data/: classes.txt
Non_project_code/collaboration1/: 0602_lego2.py  plant_.py
Non_project_code/collaboration3/turtlebot3_ws/: detect_intersection_sign.py  detect_traffic_light.py
Non_project_code/intelligence1/: Screencast 2025-05-13 16:10:35.mp4.REMOVED.git-id  smoke_fire_yolo8.py
Non_project_code/intelligence1/fire_data/: cctv_fire_img_54.txt
Non_project_code/intelligence1/robot_yolo_dataset/: data.yaml
project/collaboration1/: smithy.py
project/collaboration2/: 담배바코드2018.XLS
project/collaboration2/24_117/: cigarette_all_img_111.txt  cigarette_all_img_114.txt  cigarette_all_img_41.txt  cigarette_all_img_61.txt  cigarette_all_img_63.txt  cigarette_all_img_70.txt  cigarette_all_img_77.txt  (+4 more)
project/collaboration2/custom_pkg_srv_test/: CMakeLists.txt  client.py  setup.cfg  setup.py
project/collaboration2/custom_pkg_srv_test/log/: latest_build
project_code/collaboration3/: README.md  cam_cali.py  pid_control.py  recode.py
project_code/intelligence1/: illegal_car_crop.py
(+8506 files in other folders)
